--- a/EjercicioPractico1IanBrenes/src/main/resources/application.properties
+++ b/EjercicioPractico1IanBrenes/src/main/resources/application.properties
@@ -5,10 +5,17 @@ server.port=47
 spring.datasource.url=jdbc:mysql://localhost:3306/salon_belleza
 spring.datasource.username=usuario_ejercicio_practico_01
 spring.datasource.password=123456
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#para mostrar información en el log
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.type.descriptor.sql.BasicBinder=Trace
 
 spring.thymeleaf.cache=false
 
